# books-and-software

./: LICENSE  README.md
docs/: GLOSSARY.md  HISTORY.md  JFP_OVERVIEW.md  ROADMAP.md
examples/: agent_task_packet.jfp  compression_v1.jfp  proof_v3.jfp  task_state.jfp
parsers/: README.md
parsers/ast/: canonical_ast_example.json  jfp_ast.schema.json
parsers/basic/: README.md
parsers/c/: README.md
parsers/java/: README.md
parsers/python/: README.md
parsers/rust/: README.md
runtime/python/: README.md  pyproject.toml
runtime/python/jfp_runtime/: __init__.py  cli.py
standards/v13.0.0/: STANDARD.md
